adicione as novas atualizações

--- a/cadastro.html
+++ b/cadastro.html
@@ -10,24 +10,16 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" media="screen" href="_css/style.css">
     </head>
-     
-  <div class="container">
-  <form class="row g-3">
- <div class="col-md-3">
- <label for="pais" class="form-label">País</label>
-   <input type="text" class="form-control" id="pais">
-   </div>
-  <h3>Dados pessoais</h3>
- <div class="col-md-6">
- <label for="nome" class="form-label">Nome</label>
- <input type="text" class="form-control" id="nome">
- </div>
- <div class="col-md-6">
-<label for="sobrenome" class="form-label">Sobrenome</label>
-  <input type="text" class="form-control" id="sobrenome">
-  </div>
+    <div class="container">
+      <form class="row g-3">
+    <h3>Dados pessoais</h3>
+    <div class="col-md-6">
+    <label for="nome" class="form-label">Nome</label>
+    <input type="text" class="form-control" id="nome">
+    </div>
+  
   <div class="col-md-6">
-  <label for="data de nascimento" class="form-label">Data de Nascimento</label>
+  <label for="data de nascimento" class="form-label">Data de nascimento</label>
   <input type="date" class="form-control" id="data de nascimento">
   </div>
   <div class="col-md-6">
@@ -43,23 +35,27 @@
   <input type="password" class="form-control" id="senha">
   </div>
   <div class="col-md-6">
-  <label for="confirmar senha" class="form-label">Confirmar Senha</label>
+  <label for="confirmar senha" class="form-label">confirme sua senha </label>
   <input type="text" class="form-control" id="confirmar senha">
   </div>
   <h3>Dados de Endereço</h3>
   <div class="col-md-2">
-  <label for="inputZip" class="form-label">Cep </label>
+  <label for="inputZip" class="form-label">Cep</label>
   <input type="text" class="form-control" id="inputZip">
   </div>
-  <div class="col-12">
-  <label for="inputAddress" class="form-label">Endereço</label>
-  <input type="text" class="form-control" id="endereco" placeholder="1234 Main St">
-   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
+    <label for="pais" class="form-label">País</label>
+<input type="text" class="form-control" id="pais">
+</div>
+<div class="col-md-2">
   <label for="numero de residencia" class="form-label">Número de Residência</label>
   <input type="number" class="form-control" id="numero de residencia">
   </div>
-  <div class="col-12">
+  <div class="col-7">
+  <label for="inputAddress" class="form-label">Endereço</label>
+  <input type="text" class="form-control" id="endereco" placeholder="1234 Main St">
+   </div>
+  <div class="col-7">
   <label for="inputAddress2" class="form-label">Bairro</label>
   <input type="text" class="form-control" id="bairro" placeholder="Apartment, studio, or floor">
   </div>
@@ -87,12 +83,11 @@
   <label for="rg" class="form-label">RG</label>
   <input type="number" class="form-control" id="rg">
    </div>
-  <h6>Os endereços de cobrança e entrega são os mesmos
-   Método de envio.
-   Standard Delivery.
-  Frete em 2-3 dias úteis.
-  Os itens podem ser enviados individualmente assim que estiverem disponíveis. Você receberá e-mails de confirmação separados quando os produtos forem enviados para você.
-  </h6>
+  <h6>Método de envio.
+    Standard Delivery.
+   Frete em 2-3 dias úteis.
+   Os itens podem ser enviados individualmente assim que estiverem disponíveis.
+    Você receberá e-mails de confirmação separados quando os produtos forem enviados para você. </h6>
   <div class="col-12">
   <div class="form-check">
   <input class="form-check-input" type="checkbox" id="gridCheck">
