--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
 <body style="background-color: rgb(237, 237, 248);">
   <div class="container">
     <form class="row g-3">
-      <h3>Dados pessoais</h3>
+      <h3>Dados Pessoais</h3>
       <div class="col-md-6">
         <label for="nome" class="form-label">Nome</label>
         <input type="text" class="form-control" id="nome">
